apps/kube/cityvote/manifest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: cityvote-route
    namespace: cityvote
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - cityvote.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          timeouts:
              backendRequest: 3600s
          backendRefs:
              - name: cityvote-service
                port: 4321
